--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <main>
     <section id="about">
       <h2>About Us</h2>
-      <p>We’re a student-led organization dedicated to making STEM accessible for all students across Japan.</p>
+      <p>私たちはYouth Stem Initiative(YSI)の日本支部です。YSIは学生主体の世界のための科学を目指すSTEM団体です。13カ国から来る162メンバーからなる団体で、現在は69の論文を出版しています。</p>
     </section>
 
     <section id="projects">
