--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <section id="about">
       <h2>About Us</h2>
       <p>私たちはYouth Stem Initiative(YSI)の日本支部です。YSIは学生主体の世界のための科学を目指すSTEM団体です。13カ国から来る162メンバーからなる団体で、現在は69の論文を出版しています。</p>
+      <a href="https://youthsteminitiative.com/">
+      <button>YSI website</button>
+</a>
     </section>
 
     <section id="projects">
