--- a/index.html
+++ b/index.html
@@ -38,21 +38,21 @@
         <div class="member-card" onclick="toggleDescription(this)">
           <div class="member-header">Maria Fujisawa</div>
             <div class="member-description">
-              Alice is a software engineer focused on web development and UI design.
+              Skills: HTML
             </div>
           </div>
 
       <div class="member-card" onclick="toggleDescription(this)">
         <div class="member-header">Ryuma Kojima</div>
           <div class="member-description">
-            Bob is a mechanical engineer passionate about robotics and CAD modeling.
+            Skills: C++
         </div>
       </div>
 
       <div class="member-card" onclick="toggleDescription(this)">
         <div class="member-header">Erina Maeda</div>
           <div class="member-description">
-            Charlie leads the data analysis team and specializes in machine learning.
+            Skills: Neuroscience
           </div>
       </div>
 
