--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
     <section id="join">
       <h2>Join Us</h2>
       <p>Interested in learning more or volunteering? Click below to get involved.</p>
+      <a href="https://docs.google.com/forms/d/e/1FAIpQLSfDnC-yk9tT-GHx2mFkfUjjJG2MdaFzVfdaWr8V74B4RefI4Q/viewform?usp=dialog">
       <button>Join Now</button>
+      </a>
     </section>
 
     <section id="contact">
