--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
         <div class="member-header">Erina Maeda</div>
           <div class="member-description">
             Skills: Neuroscience
+            I’m a high school student with a big curiosity streak and a special fascination with neurology—I love delving in the unknown!
+            I’m currently researching induced Neurons. That said, I’m the kind of person who can get super into just about anything if it 
+            sparks my interest. One day it’s neurons, the next it’s Greek mythology or sports. Basically, I’m on a constant adventure of 
+            learning, and I’m loving the ride.
           </div>
       </div>
 
