--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
       <h2>運営メンバー</h2>
         <div class="member-card" onclick="toggleDescription(this)">
           <div class="member-header">Maria Fujisawa</div>
+            <div class="skills">
+              <span class="skill-tag html">HTML</span>
+              <span class="skill-tag bmi">Brain machine interface</span>
+            </div>
             <div class="member-description">
               Skills: HTML
             </div>
@@ -44,6 +48,9 @@
 
       <div class="member-card" onclick="toggleDescription(this)">
         <div class="member-header">Ryuma Kojima</div>
+          <div class="skills">
+            <span class="skill-tag C++">C++</span>
+          </div>
           <div class="member-description">
             Skills: C++
         </div>
