--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 
       <div class="member-card" onclick="toggleDescription(this)">
         <div class="member-header">Erina Maeda</div>
+          <span class="skill-tag neuroscience">Neuroscience</span>
           <div class="member-description">
             Skills: Neuroscience
             I’m a high school student with a big curiosity streak and a special fascination with neurology—I love delving in the unknown!
