--- a/index.html
+++ b/index.html
@@ -42,17 +42,15 @@
               <span class="skill-tag bmi">Brain machine interface</span>
             </div>
             <div class="member-description">
-              Skills: HTML
             </div>
           </div>
 
       <div class="member-card" onclick="toggleDescription(this)">
         <div class="member-header">Ryuma Kojima</div>
           <div class="skills">
-            <span class="skill-tag C++">C++</span>
+            <span class="skill-tag Cpp">C++</span>
           </div>
           <div class="member-description">
-            Skills: C++
         </div>
       </div>
 
@@ -60,7 +58,6 @@
         <div class="member-header">Erina Maeda</div>
           <span class="skill-tag neuroscience">Neuroscience</span>
           <div class="member-description">
-            Skills: Neuroscience
             I’m a high school student with a big curiosity streak and a special fascination with neurology—I love delving in the unknown!
             I’m currently researching induced Neurons. That said, I’m the kind of person who can get super into just about anything if it 
             sparks my interest. One day it’s neurons, the next it’s Greek mythology or sports. Basically, I’m on a constant adventure of 
