--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
               <span class="skill-tag bmi">Brain machine interface</span>
             </div>
             <div class="member-description">
+              Interests: Engineering, Neurotechnology (Brain machine interfaces)
+              I’m a 17 year old student based in Tokyo, passionate about brain machine interfaces and engineering. I am a scientific 
+              researcher/ the Japan chapter leader at youth STEM initiative. I currently research the effect virtual reality plays in
+              motor imagery for brain machine interfaces. I also love robotics, 3D printing, and anything that involves building/creating,
+              whether it’s tech or communities. 
             </div>
           </div>
 
@@ -58,6 +63,7 @@
         <div class="member-header">Erina Maeda</div>
           <span class="skill-tag neuroscience">Neuroscience</span>
           <div class="member-description">
+            Interests: Neuroscience
             I’m a high school student with a big curiosity streak and a special fascination with neurology—I love delving in the unknown!
             I’m currently researching induced Neurons. That said, I’m the kind of person who can get super into just about anything if it 
             sparks my interest. One day it’s neurons, the next it’s Greek mythology or sports. Basically, I’m on a constant adventure of 
