--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   <main>
     <section id="about">
       <h2>About Us</h2>
-      <p>私たちはYouth Stem Initiative(YSI)の日本支部です。YSIは学生主体の世界のための科学を目指すSTEM団体です。13カ国から来る162メンバーからなる団体で、現在は69の論文を出版しています。</p>
+      <p>私たちはYouth Stem Initiative(YSI)の日本支部です。YSIは学生主体の世界のための科学を目指すSTEM団体です。13カ国から来る162メンバーからなる団体で、
+        現在は69の論文を出版しています。</p>
       <a href="https://youthsteminitiative.com/">
       <button>YSI website</button>
       </a>
@@ -30,7 +31,10 @@
 
     <section id="projects">
       <h2>Our Projects</h2>
-      <p>From robotics workshops to AI research, check out how we’re inspiring the next generation of innovators!</p>
+      <p>From robotics workshops to Linguistic research, check out how we’re inspiring the next generation of innovators!</p>
+      <a href="projects.html">
+      <button>More Projects</button>
+      </a>
     </section>
 
     <section id="members">
