--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <h1>Youth STEM Initiative Japan</h1>
   <main>
     <section id="about">
-      <h2>About Us</h2>
+      <h2 class="title">About Us</h2>
       <p>私たちはYouth Stem Initiative(YSI)の日本支部です。YSIは学生主体の世界のための科学を目指すSTEM団体です。13カ国から来る162メンバーからなる団体で、
         現在は69の論文を出版しています。日本支部では、現在２校の高校生3人で活動しています！高校生に限らず、STEM に興味がある学生なら誰でも歓迎です。
         興味のある方は、ぜひ InstagramやXのDM、または ウェブサイト下部の参加フォームからご連絡ください！
@@ -32,7 +32,7 @@
     </section>
 
     <section id="projects">
-      <h2>Our Projects</h2>
+      <h2 class="title">Our Projects</h2>
       <p>From robotics workshops to Linguistic research, check out how we’re inspiring the next generation of innovators!</p>
       <a href="projects.html">
       <button>More Projects</button>
@@ -40,7 +40,7 @@
     </section>
 
     <section id="members">
-      <h2>運営メンバー</h2>
+      <h2 class="title">運営メンバー</h2>
         <div class="member-card" onclick="toggleDescription(this)">
           <div class="member-header">Maria Fujisawa</div>
             <div class="skills">
@@ -85,7 +85,7 @@
 
 
     <section id="join">
-      <h2>Join Us</h2>
+      <h2 class="title">Join Us</h2>
       <p>Interested in learning more or volunteering? Click below to get involved.</p>
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSfDnC-yk9tT-GHx2mFkfUjjJG2MdaFzVfdaWr8V74B4RefI4Q/viewform?usp=dialog">
       <button>Join Now</button>
@@ -93,7 +93,7 @@
     </section>
 
     <section id="contact">
-      <h2>Contact</h2>
+      <h2 class="title">Contact</h2>
       <p>Email us at: info@youthstemjapan.org</p>
     </section>
   </main>
