--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <main>
     <section id="about">
       <h2 class="title">About Us</h2>
-      <p>私たちはYouth Stem Initiative(YSI)の日本支部です。YSIは学生主体の世界のための科学を目指すSTEM団体です。13カ国から来る162メンバーからなる団体で、
+      <p class="about-description">私たちはYouth Stem Initiative(YSI)の日本支部です。YSIは学生主体の世界のための科学を目指すSTEM団体です。13カ国から来る162メンバーからなる団体で、
         現在は69の論文を出版しています。日本支部では、現在２校の高校生3人で活動しています！高校生に限らず、STEM に興味がある学生なら誰でも歓迎です。
         興味のある方は、ぜひ InstagramやXのDM、または ウェブサイト下部の参加フォームからご連絡ください！
       </p>
