--- a/index.html
+++ b/index.html
@@ -20,16 +20,21 @@
   </header>
   <h1>Youth STEM Initiative Japan</h1>
   <main>
-    <section id="about">
-      <h2 class="title">About Us</h2>
-      <p class="aboutstatement">私たちはYouth Stem Initiative(YSI)の日本支部です。YSIは学生主体の世界のための科学を目指すSTEM団体です。13カ国から来る162メンバーからなる団体で、
-        現在は69の論文を出版しています。日本支部では、現在２校の高校生3人で活動しています！高校生に限らず、STEM に興味がある学生なら誰でも歓迎です。
-        興味のある方は、ぜひ InstagramやXのDM、または ウェブサイト下部の参加フォームからご連絡ください！
+   <section id="about">
+    <h2 class="title">About Us</h2>
+      <p class="aboutstatement">
+        私たちは <strong>Youth STEM Initiative (YSI)</strong> の日本支部です。<br>
+        YSIは、学生主体で世界のための科学を目指すグローバルなSTEM団体で、13カ国から集まった<strong>162人のメンバー</strong>が所属し、これまでに<strong>69本の論文</strong>を発表しています。<br><br>
+        日本支部では、現在2校の高校に通う<strong>高校生3人</strong>で活動しています！<br>
+        高校生に限らず、<strong>STEMに興味のある学生なら誰でも歓迎</strong>です。<br><br>
+        興味のある方は、ぜひ <strong>Instagram</strong> や <strong>X</strong> のDM、またはウェブサイト下部の<strong>参加フォーム</strong>からご連絡ください！
       </p>
-      <a href="https://youthsteminitiative.com/">
-      <button>YSI website</button>
+
+      <a href="https://youthsteminitiative.com/" target="_blank" rel="noopener noreferrer">
+        <button class="ysi-button">YSI Website</button>
       </a>
     </section>
+
 
     <section id="projects">
       <h2 class="title">Our Projects</h2>
