--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <h2 class="title">Join Us</h2>
       <p>Interested in learning more or volunteering? Click below to get involved.</p>
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSfDnC-yk9tT-GHx2mFkfUjjJG2MdaFzVfdaWr8V74B4RefI4Q/viewform?usp=dialog">
-      <button>Join Now</button>
+      <button class="ysi-button">Join Now</button>
       </a>
     </section>
 
