--- a/index.html
+++ b/index.html
@@ -33,6 +33,25 @@
       <a href="https://youthsteminitiative.com/" target="_blank" rel="noopener noreferrer">
         <button class="ysi-button">YSI Website</button>
       </a>
+      <div class="activity-section">
+          <h3>活動内容</h3>
+        <div class="activity-cards">
+          <div class="card">
+            <h4>研究活動</h4>
+            <p>言語学の分野の</p>
+          </div>
+          <div class="card">
+            <h4>YSI Ignite Science Magazine</h4>
+            <p>2ヶ月に1回YSI IgniteというBimonthly Magazineを出しています！月ごとに違うトピックのメンバーが書いた記事を集めたマガジンです。
+              （Marine Biology,The science of life）</p>
+          </div>
+          <div class="card">
+            <h4>国際交流</h4>
+            <p>他国のメンバーとZoomでディスカッションを実施。</p>
+          </div>
+        </div>
+      </div>
+
     </section>
 
 
