--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </div>
           <div class="card">
             <h4>国際交流</h4>
-            <p>他国のメンバーとZoomでディスカッションを実施。</p>
+            <p>YSIでは毎月Study SessionsやSTEMの講座、ワークショップやウェビナーが開催されているため、日本だけでなく他の国のメンバーとの交流の機会もたくさんあります。</p>
           </div>
         </div>
       </div>
