--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
           <h3>活動内容</h3>
         <div class="activity-cards">
           <div class="card">
-            <h4>研究活動</h4>
-            <p>言語学の分野の</p>
+            <h4>メンバーの関わり方</h4>
+            <p>
+              <strong>コアメンバー：</strong>週1回程のミーティングに参加し、プロジェクトや企画の運営に関わります。
+              <strong>コミュニティメンバー：</strong>興味のあるイベント、プロジェクトへの参加、運営に関わります。
+            </p>
           </div>
           <div class="card">
             <h4>YSI Ignite Science Magazine</h4>
