--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h4>メンバーの関わり方</h4>
             <p>
               <strong>コアメンバー：</strong>週1回程のミーティングに参加し、プロジェクトや企画の運営に関わります。
-              <strong>コミュニティメンバー：</strong>興味のあるイベント、プロジェクトへの参加、運営に関わります。
+              <strong>コミュニティメンバー：</strong>興味のあるイベント、プロジェクトへの参加に関わります。
             </p>
           </div>
           <div class="card">
