--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <h2 class="title">Our Projects</h2>
       <p>From robotics workshops to Linguistic research, check out how we’re inspiring the next generation of innovators!</p>
       <a href="projects.html">
-      <button>More Projects</button>
+      <button class="ysi-button">More Projects</button>
       </a>
     </section>
 
