--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <div class="card">
             <h4>メンバーの関わり方</h4>
             <p>
-              <strong>コアメンバー：</strong>週1回程のミーティングに参加し、プロジェクトや企画の運営に関わります。
+              <strong>コアメンバー：</strong>週1回程のミーティングに参加し、プロジェクトや企画の運営に関わります。<br>
               <strong>コミュニティメンバー：</strong>興味のあるイベント、プロジェクトへの参加に関わります。
             </p>
           </div>
