--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <div class="card">
             <h4>YSI Ignite Science Magazine</h4>
             <p>2ヶ月に1回YSI IgniteというBimonthly Magazineを出しています！月ごとに違うトピックのメンバーが書いた記事を集めたマガジンです。
-              （Marine Biology,The science of life）</p>
+              <br>（過去テーマ：Marine Biology,The science of life）</p>
           </div>
           <div class="card">
             <h4>国際交流</h4>
