--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
     <h2 class="title">About Us</h2>
       <p class="aboutstatement">
         私たちは <strong>Youth STEM Initiative (YSI)</strong> の日本支部です。<br>
-        YSIは、学生主体で世界のための科学を目指すグローバルなSTEM団体で、13カ国から集まった<strong>162人のメンバー</strong>が所属し、これまでに<strong>69本の論文</strong>を発表しています。<br><br>
+        YSIは、学生主体で世界のための科学を目指すグローバルなSTEM団体で、13カ国から集まった<strong>162人のメンバー</strong>が所属し、これまでに<strong>
+          69本の論文</strong>を発表しています。<br><br>
         日本支部では、現在2校の高校に通う高校生3人で活動しています！<br>
         高校生に限らず、STEMに興味のある学生なら誰でも歓迎です。<br><br>
         興味のある方は、ぜひInstagramやXのDM、またはウェブサイト下部の<strong>参加フォーム</strong>からご連絡ください！
@@ -50,7 +51,8 @@
           </div>
           <div class="card">
             <h4>国際交流</h4>
-            <p>YSIでは毎月Study SessionsやSTEMの講座、ワークショップやウェビナーが開催されているため、日本だけでなく他の国のメンバーとの交流の機会もたくさんあります。</p>
+            <p>YSIでは毎月Study SessionsやSTEMの講座、ワークショップやウェビナーが開催されているため、日本だけでなく他の国のメンバーとの交流の機会
+              もたくさんあります。</p>
           </div>
         </div>
       </div>
