--- a/index.html
+++ b/index.html
@@ -56,6 +56,24 @@
           </div>
         </div>
       </div>
+      <div class="stat-box">
+        <div class="stat">
+          <h3>162+</h3>
+          <p>Global Members</p>
+        </div>
+        <div class="stat">
+          <h3>69</h3>
+          <p>Published Papers</p>
+        </div>
+        <div class="stat">
+          <h3>2</h3>
+          <p>Schools in Japan</p>
+        </div>
+        <div class="stat">
+          <h3>3</h3>
+          <p>Current Japan Members</p>
+        </div>
+      </div>
 
     </section>
 
