--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class="stat">
           <h3>69</h3>
-          <p>Published Papers</p>
+          <p>Published papers</p>
         </div>
         <div class="stat">
           <h3>2</h3>
