--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         </div>
       </div>
       <div class="stat-box">
+        <h4>Impact</h4>
         <div class="stat">
           <h3>162+</h3>
           <p>Global Members</p>
@@ -70,7 +71,7 @@
           <p>Schools in Japan</p>
         </div>
         <div class="stat">
-          <h3>3</h3>
+          <h3>5</h3>
           <p>Current Japan Members</p>
         </div>
       </div>
