--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <p>Current Japan Members</p>
         </div>
       </div>
-
+      <img src="ysimap" alt="YSI chapters" class="ysimap">
     </section>
 
 
