--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
           </div>
         </div>
       </div>
+     <h4 class="title">Impact</h4>
       <div class="stat-box">
-        <h4>Impact</h4>
         <div class="stat">
           <h3>162+</h3>
           <p>Global Members</p>
