--- a/index.html
+++ b/index.html
@@ -60,19 +60,19 @@
       <div class="stat-box">
         <div class="stat">
           <h3>162+</h3>
-          <p>Global Members</p>
+          <h4>Global Members</h4>
         </div>
         <div class="stat">
           <h3>69</h3>
-          <p>Published papers</p>
+          <h4>Published papers</h4>
         </div>
         <div class="stat">
           <h3>2</h3>
-          <p>Schools in Japan</p>
+          <h4>Schools in Japan</h4>
         </div>
         <div class="stat">
           <h3>5</h3>
-          <p>Current Japan Members</p>
+          <h4>Current Japan Members</h4>
         </div>
       </div>
       <img src="ysimap" alt="YSI chapters" class="ysimap">
