--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <section id="projects">
       <h2 class="title">Our Projects</h2>
-      <p>From robotics workshops to Linguistic research, check out how we’re inspiring the next generation of innovators!</p>
+      <p>YSI Igniteのマガジンやロボティックス、神経科学、言語学、など様々な分野のプロジェクトをしています！</p>
       <a href="projects.html">
       <button class="ysi-button">More Projects</button>
       </a>
