--- a/projects.html
+++ b/projects.html
@@ -1,1 +1,11 @@
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" href="ysi profile pic.png" type="image/x-icon">
+  <title>Youth STEM Initiative Japan</title>
+  <link rel="stylesheet" href="ysiwebsite.css" />
+</head>
+<body>
+</body>
 
