--- a/projects.html
+++ b/projects.html
@@ -86,7 +86,17 @@
   </style>
 </head>
 <body>
-
+ <header>
+    <nav>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#join">Join Us</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <h1>Youth STEM Initiative Japan</h1>
 <header>
   <h1>Our Projects</h1>
   <p class="description">
