--- a/projects.html
+++ b/projects.html
@@ -103,6 +103,7 @@
   </p>
 
 <div class="masonry">
+<div class="project-grid">
   <!-- Project card 1 -->
   <div class="project-card">
     <img src="images/project1.jpg" alt="Robotics Workshop">
@@ -121,7 +122,7 @@
     </div>
   </div>
 
-  <!-- Add more project cards as needed -->
+  <!-- Add more project cards here... -->
 </div>
 
 </body>
