--- a/projects.html
+++ b/projects.html
@@ -106,10 +106,13 @@
 <div class="project-grid">
   <!-- Project card 1 -->
   <div class="project-card">
-    <img src="images/project1.jpg" alt="Robotics Workshop">
+    <img src="images/project1.jpg" alt="YSI Ignite Edition#1">
     <div class="card-content">
-      <h3>Robotics Workshop</h3>
-      <p>Students built their first autonomous robots in this interactive workshop.</p>
+      <h3>YSI Ignite Edition#1</h3>
+      <p>高校生メンバーによって制作されたサイエンスマガジンで、「The science of Life」をテーマにした記事を特集しています。
+        　初のEdition１を出しました！
+      </p>
+      <button>サイエンスマガジンリンク</button>
     </div>
   </div>
 
