--- a/projects.html
+++ b/projects.html
@@ -87,7 +87,7 @@
 </head>
 <body>
  <header>
-    <nav>
+    <nav class="navbar">
       <ul>
         <li><a href="index.html#about">About</a></li>
         <li><a href="index.html#projects">Projects</a></li>
