--- a/projects.html
+++ b/projects.html
@@ -103,7 +103,6 @@
   </p>
 
 <div class="masonry">
-  <!-- Project card 1 -->
   <div class="project-card">
     <img src="images/project1.jpg" alt="YSI Ignite Edition#1">
     <div class="card-content">
@@ -112,9 +111,9 @@
         　初のEdition１を出しました！
       </p>
       <button>サイエンスマガジンリンク</button>
+    </div>
   </div>
 
-  <!-- Project card 2 -->
   <div class="project-card">
     <img src="images/project2.jpg" alt="AI Linguistics Research">
     <div class="card-content">
@@ -122,6 +121,7 @@
       <p>Exploring the intersection of language and artificial intelligence in our global publication initiative.</p>
     </div>
   </div>
+</div>
 
   <!-- Add more project cards here... -->
 </div>
