--- a/projects.html
+++ b/projects.html
@@ -110,7 +110,9 @@
       <p>高校生メンバーによって制作されたサイエンスマガジンで、「The science of Life」をテーマにした記事を特集しています。
         　初のEdition１を出しました！
       </p>
-      <button>サイエンスマガジンリンク</button>
+      <a href="https://online.fliphtml5.com/poscz/cgny/">
+      <button class="ysi-button">サイエンスマガジンリンク</button>
+      </a>
     </div>
   </div>
 
