--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         card.classList.toggle('expanded');
         }
       </script>
-
+    </section>
 
     <section id="join">
       <h2 class="title">Join Us</h2>
