--- a/index.html
+++ b/index.html
@@ -8,16 +8,19 @@
   <link rel="stylesheet" href="ysiwebsite.css" />
 </head>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#join">Join Us</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
-  </header>
+<header>
+  <nav class="navbar">
+    <a href="index.html" class="logo">
+      <img src="images/ysi-logo.png" alt="YSI Japan Logo">
+    </a>
+    <ul class="nav-links">
+      <li><a href="#about">About</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#join">Join Us</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+</header>
   <h1>Youth STEM Initiative Japan</h1>
   <main>
    <section id="about">
