--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
   <nav class="navbar">
     <a href="index.html" class="logo">
-      <img src="images/ysi-logo.png" alt="YSI Japan Logo">
+      <img src="pfpfor.jpeg" alt="YSI Japan Logo">
     </a>
     <ul class="nav-links">
       <li><a href="#about">About</a></li>
