--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </ul>
   </nav>
 </header>
-  <h1>Youth STEM Initiative Japan</h1>
+  <h1 class="main-title">Youth STEM Initiative Japan</h1>
   <main>
    <section id="about">
     <h2 class="title">About Us</h2>
