--- a/index.html
+++ b/index.html
@@ -145,6 +145,14 @@
       <p>Email us at: info@youthstemjapan.org</p>
     </section>
   </main>
+  <div class="social-icons">
+  <a href="https://x.com/GMTCJapan" target="_blank" aria-label="X">
+    <i class="fab fa-x-twitter"></i>
+  </a>
+  <a href="https://instagram.com/gmtcjapan" target="_blank" aria-label="Instagram">
+    <i class="fab fa-instagram"></i>
+  </a>
+</div>
 
   <footer>
     <p>© 2025 Youth STEM Initiative Japan. All rights reserved.</p>
