--- a/projects.html
+++ b/projects.html
@@ -110,7 +110,7 @@
       <p>高校生メンバーによって制作されたサイエンスマガジンで、「The science of Life」をテーマにした記事を特集しています。
         　初のEdition１を出しました！
       </p>
-      <a href="https://drive.google.com/drive/search?hl=ja&q=ignite">
+      <a href="https://drive.google.com/file/d/1aDve4J9Bm7BYgL0IbQ605egt2yotEszI/view?usp=drive_link">
       <button class="ysi-button">サイエンスマガジンリンク</button>
       </a>
     </div>
