--- a/index.html
+++ b/index.html
@@ -154,8 +154,16 @@
     </a>
     </div>
 
-  <footer>
+<footer style="text-align: center; padding: 20px; background-color: #f8f8f8;">
+  <p>Follow us on</p>
+  <a href="https://x.com/ysijapan" target="_blank" style="margin: 0 10px; color: #000;">
+    <i class="fab fa-x-twitter fa-2x"></i>
+  </a>
+  <a href="https://instagram.com/ysi.japan" target="_blank" style="margin: 0 10px; color: #000;">
+    <i class="fab fa-instagram fa-2x"></i>
     <p>© 2025 Youth STEM Initiative Japan. All rights reserved.</p>
-  </footer>
+  </a>
+</footer>
+</html>
 </body>
 </html>
