--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
     <section id="join">
       <h2 class="title">Join Us</h2>
-      <p>Interested in learning more or volunteering? Click below to get involved.</p>
+      <p>STEMに興味のある方、コミュニティー運営に関わりたい方募集中です！興味のある方は下のフォームから↓</p>
       <a href="https://docs.google.com/forms/d/e/1FAIpQLSfDnC-yk9tT-GHx2mFkfUjjJG2MdaFzVfdaWr8V74B4RefI4Q/viewform?usp=dialog">
       <button class="ysi-button">Join Now</button>
       </a>
