--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         YSIは、学生主体で世界のための科学を目指すグローバルなSTEM団体で、13カ国から集まった<strong>162人のメンバー</strong>が所属し、これまでに<strong>
           69本の論文</strong>を発表しています。<br><br>
         日本支部では、現在2校の高校に通う高校生3人で活動しています！<br>
-        高校生に限らず、STEMに興味のある学生なら誰でも歓迎です。<br><br>
-        興味のある方は、ぜひInstagramやXのDM、またはウェブサイト下部の<strong>参加フォーム</strong>からご連絡ください！
+        高校生に限らず、STEMに興味のある学生なら誰でも歓迎です。オンラインのディスコード上でのコミュニティがメインになります。<br><br>
+        現在はSTEMマガジンや勉強会、研究プロジェクトなどたくさん企画しています。興味のある方は、ぜひInstagramやXのDM、またはウェブサイト下部の<strong>参加フォーム</strong>からご連絡ください！
       </p>
 
       <a href="https://youthsteminitiative.com/" target="_blank" rel="noopener noreferrer">
