--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="icon" href="ysi profile pic.png" type="image/x-icon">
   <title>Youth STEM Initiative Japan</title>
   <link rel="stylesheet" href="ysiwebsite.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 <body>
 <header>
