--- a/index.html
+++ b/index.html
@@ -148,24 +148,17 @@
     </section>
   </main>
     <div class="social-icons">
-    <a href="https://x.com/GMTCJapan" target="_blank" aria-label="X">
+    <a href="https://x.com/ysijapan" target="_blank" aria-label="X">
       <i class="fab fa-x-twitter"></i>
     </a>
-    <a href="https://instagram.com/gmtcjapan" target="_blank" aria-label="Instagram">
+    <a href="https://instagram.com/ysi.japan" target="_blank" aria-label="Instagram">
       <i class="fab fa-instagram"></i>
     </a>
     </div>
 
   <footer style="text-align: center; padding: 20px; background-color: #f8f8f8;">
-    <p>Follow us on</p>
-    <a href="https://x.com/ysijapan" target="_blank" style="margin: 0 10px; color: #000;">
-      <i class="fab fa-x-twitter fa-2x"></i>
-    </a>
-    <a href="https://instagram.com/ysi.japan" target="_blank" style="margin: 0 10px; color: #000;">
-      <i class="fab fa-instagram fa-2x"></i>
-    </a>
     <p>© 2025 Youth STEM Initiative Japan. All rights reserved.</p>
-</footer>
+  </footer>
 </html>
 </body>
 </html>
