--- a/index.html
+++ b/index.html
@@ -147,16 +147,16 @@
       <p>Email us at: info@youthstemjapan.org</p>
     </section>
   </main>
-    <div class="social-icons">
+
+  <footer style="text-align: center; padding: 20px; background-color: #f8f8f8;">
+    <footer>
     <a href="https://x.com/ysijapan" target="_blank" aria-label="X">
       <i class="fab fa-x-twitter"></i>
     </a>
     <a href="https://instagram.com/ysi.japan" target="_blank" aria-label="Instagram">
       <i class="fab fa-instagram"></i>
     </a>
-    </div>
-
-  <footer style="text-align: center; padding: 20px; background-color: #f8f8f8;">
+</footer>
     <p>© 2025 Youth STEM Initiative Japan. All rights reserved.</p>
   </footer>
 </html>
