--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
   <footer style="text-align: center; padding: 20px; background-color: #f8f8f8;">
     <footer>
     <a href="https://x.com/ysijapan" target="_blank" aria-label="X">
-      <i class="fab fa-x-twitter"></i>
+      <i class="fab fa-x-twitter fa-2x"></i>
     </a>
     <a href="https://instagram.com/ysi.japan" target="_blank" aria-label="Instagram">
-      <i class="fab fa-instagram"></i>
+      <i class="fab fa-instagram fa-2x"></i>
     </a>
 </footer>
     <p>© 2025 Youth STEM Initiative Japan. All rights reserved.</p>
