--- a/index.html
+++ b/index.html
@@ -91,9 +91,13 @@
     <h2 class="title">運営メンバー</h2>
       <div class="members-grid">
       <div class="member-box">
-        <img src="maria.jpg" alt="Maria" class="member-pfp">
+        <img src="pfpfor.jpg" alt="Maria" class="member-pfp">
         <h3>Maria Fujisawa</h3>
         <p>Brain-Machine Interfaces / Robotics</p>
+        <p>17歳の高校三年生で、ブレイン・マシン・インターフェース(BMI)とエンジニアリングに興味があります。
+          現在はBMIにおける運動イメージに対するVRの効果について研究しています！
+          また、ロボティクスや3Dプリンティング、テクノロジーなど、ものづくりに関わることが大好きです。
+        </p>
       </div>
 
       <div class="member-box">
@@ -106,6 +110,10 @@
         <img src="erina.jpg" alt="Erina" class="member-pfp">
         <h3>Erina Maeda</h3>
         <p>Neuroscience / Researcher</p>
+        <p>高校生で、好奇心旺盛＆神経科学に特に魅力を感じています。未知の世界を探るのが大好きです！
+          現在は「誘導ニューロン（iN）」について研究しています。
+          興味を引かれたことには何でも夢中になれるので、ニューロンだったり、ギリシャ神話やスポーツだったりなんでも興味があります。
+        </p>
       </div>
 
       <div class="member-box">
