--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <img src="erina.jpg" alt="Erina" class="member-pfp">
         <h3>Erina Maeda</h3>
         <p>Neuroscience / Researcher</p>
-        <p>高校生で、好奇心旺盛＆神経科学に特に魅力を感じています。未知の世界を探るのが大好きです！
+        <p>高校３年生で、神経科学や知らない世界を探るのが大好きです！
           現在は「誘導ニューロン（iN）」について研究しています。
           興味を引かれたことには何でも夢中になれるので、ニューロンだったり、ギリシャ神話やスポーツだったりなんでも興味があります。
         </p>
