--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <button class="ysi-button">YSI Website</button>
       </a>
       <div class="activity-section">
-          <h3>活動内容</h3>
+          <h3 class="title">活動内容</h3>
         <div class="activity-cards">
           <div class="card">
             <h4>メンバーの関わり方</h4>
