--- a/projects.html
+++ b/projects.html
@@ -107,7 +107,7 @@
     <img src="images/project1.jpg" alt="YSI Ignite Edition#1">
     <div class="card-content">
       <h3>YSI Ignite Edition#1</h3>
-      <p>高校生メンバーによって制作されたサイエンスマガジンで、「The science of Life」をテーマにした記事を特集しています。
+      <p>June 2025 高校生メンバーによって制作されたサイエンスマガジンで、「The science of Life」をテーマにした記事を特集しています。
         　初のEdition１を出しました！
       </p>
       <a href="https://drive.google.com/file/d/1aDve4J9Bm7BYgL0IbQ605egt2yotEszI/view?usp=drive_link">
@@ -123,6 +123,34 @@
       <p>Exploring the intersection of language and artificial intelligence in our global publication initiative.</p>
     </div>
   </div>
+
+  <div class="project-card">
+    <img src="images/project3.jpg" alt="YSI Ignite Edition#2">
+    <div class="card-content">
+      <h3>YSI Ignite Edition#2</h3>
+      <p>July 2025 YSIメンバーによって編集して作られたサイエンスマガジンで、「Marine Science」海洋科学をテーマにした記事の特集、今月の活動についてです。
+        　Edition 2を出しました！
+      </p>
+      <a href="https://drive.google.com/file/d/100q-77MF5WAFj_VXdLWiNBjdbanphSbg/view?usp=sharing">
+      <button class="ysi-button">サイエンスマガジンリンク</button>
+      </a>
+    </div>
+  </div>
+
+    <div class="project-card">
+    <img src="images/project4.jpg" alt="YSI Ignite Edition#2">
+    <div class="card-content">
+      <h3>YSI Japan STEM posts</h3>
+      <p>
+        YSI日本支部では毎週月曜日にSTEM関連の投稿をしています！6月は天文学、7月のテーマは海洋科学です。面白い雑学や覚えるといい単語などを解説しています。
+        インスタグラム、Xを是非みてみてください。
+      </p>
+      <a href="https://www.instagram.com/ysi.japan/">
+      <button class="ysi-button">サイエンスマガジンリンク#2</button>
+      </a>
+    </div>
+  </div>
+  
 </div>
 
   <!-- Add more project cards here... -->
