--- a/projects.html
+++ b/projects.html
@@ -107,7 +107,7 @@
     <img src="images/project1.jpg" alt="YSI Ignite Edition#1">
     <div class="card-content">
       <h3>YSI Ignite Edition#1</h3>
-      <p>June 2025 高校生メンバーによって制作されたサイエンスマガジンで、「The science of Life」をテーマにした記事を特集しています。
+      <p><h4>June 2025</h4> 高校生メンバーによって制作されたサイエンスマガジンで、「The science of Life」をテーマにした記事を特集しています。
         　初のEdition１を出しました！
       </p>
       <a href="https://drive.google.com/file/d/1aDve4J9Bm7BYgL0IbQ605egt2yotEszI/view?usp=drive_link">
@@ -128,7 +128,7 @@
     <img src="images/project3.jpg" alt="YSI Ignite Edition#2">
     <div class="card-content">
       <h3>YSI Ignite Edition#2</h3>
-      <p>July 2025 YSIメンバーによって編集して作られたサイエンスマガジンで、「Marine Science」海洋科学をテーマにした記事の特集、今月の活動についてです。
+      <p><h4>July 2025</h4> YSIメンバーによって編集して作られたサイエンスマガジンで、「Marine Science」海洋科学をテーマにした記事の特集、今月の活動についてです。
         　Edition 2を出しました！
       </p>
       <a href="https://drive.google.com/file/d/100q-77MF5WAFj_VXdLWiNBjdbanphSbg/view?usp=sharing">
