--- a/projects.html
+++ b/projects.html
@@ -138,7 +138,7 @@
   </div>
 
     <div class="project-card">
-    <img src="images/project4.jpg" alt="YSI Ignite Edition#2">
+    <img src="astronomy.png" alt="YSI SNS posts">
     <div class="card-content">
       <h3>YSI Japan STEM posts</h3>
       <p>
