--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
             <p>YSIでは毎月Study SessionsやSTEMの講座、ワークショップやウェビナーが開催されているため、日本だけでなく他の国のメンバーとの交流の機会
               もたくさんあります。</p>
           </div>
+          <div class="card">
+            <h4>SNS投稿</h4>
+            <p>毎週月曜日にSTEM関連の雑学や覚えているといい単語の解説をインスタやXに投稿しています。</p>
+          </div>
         </div>
       </div>
      <h4 class="title">Impact</h4>
@@ -91,7 +95,7 @@
     <h2 class="title">運営メンバー</h2>
       <div class="members-grid">
       <div class="member-box">
-        <img src="pfpfor.jpg" alt="Maria" class="member-pfp">
+        <img src="pfpfor.jpeg" alt="Maria" class="member-pfp">
         <h3>Maria Fujisawa</h3>
         <p>Brain-Machine Interfaces / Robotics</p>
         <p>17歳の高校三年生で、ブレイン・マシン・インターフェース(BMI)とエンジニアリングに興味があります。
