--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       </div>
 
       <div class="member-box">
-        <img src="ryuma.jpg" alt="Ryuma" class="member-pfp">
+        <img src="ryuma.png" alt="Ryuma" class="member-pfp">
         <h3>Ryuma Kojima</h3>
         <p>AI & C++ Developer</p>
       </div>
