--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </div>
 
       <div class="member-box">
-        <img src="erina.jpg" alt="Erina" class="member-pfp">
+        <img src="erinapic.jpg" alt="Erina" class="member-pfp">
         <h3>Erina Maeda</h3>
         <p>Neuroscience / Researcher</p>
         <p>高校３年生で、神経科学や知らない世界を探るのが大好きです！
