--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           興味を引かれたことには何でも夢中になれるので、ニューロンだったり、ギリシャ神話やスポーツだったりなんでも興味があります。
         </p>
       </div>
-
+    </div>
     </section>
 
     <section id="join">
