--- a/projects.html
+++ b/projects.html
@@ -104,7 +104,7 @@
 
 <div class="masonry">
   <div class="project-card">
-    <img src="images/project1.jpg" alt="YSI Ignite Edition#1">
+    <img src="thescienceoflife.png" alt="YSI Ignite Edition#1">
     <div class="card-content">
       <h3>YSI Ignite Edition#1</h3>
       <p><h4>June 2025</h4> 高校生メンバーによって制作されたサイエンスマガジンで、「The science of Life」をテーマにした記事を特集しています。
@@ -125,14 +125,14 @@
   </div>
 
   <div class="project-card">
-    <img src="images/project3.jpg" alt="YSI Ignite Edition#2">
+    <img src="marinescience.png" alt="YSI Ignite Edition#2">
     <div class="card-content">
       <h3>YSI Ignite Edition#2</h3>
       <p><h4>July 2025</h4> YSIメンバーによって編集して作られたサイエンスマガジンで、「Marine Science」海洋科学をテーマにした記事の特集、今月の活動についてです。
         　Edition 2を出しました！
       </p>
       <a href="https://drive.google.com/file/d/100q-77MF5WAFj_VXdLWiNBjdbanphSbg/view?usp=sharing">
-      <button class="ysi-button">サイエンスマガジンリンク</button>
+      <button class="ysi-button">サイエンスマガジンリンク#2</button>
       </a>
     </div>
   </div>
