--- a/projects.html
+++ b/projects.html
@@ -104,7 +104,7 @@
 
 <div class="masonry">
   <div class="project-card">
-    <img src="thescienceoflife.png" alt="YSI Ignite Edition#1">
+    <img src="The Science of Life.png" alt="YSI Ignite Edition#1">
     <div class="card-content">
       <h3>YSI Ignite Edition#1</h3>
       <p><h4>June 2025</h4> 高校生メンバーによって制作されたサイエンスマガジンで、「The science of Life」をテーマにした記事を特集しています。
