--- a/projects.html
+++ b/projects.html
@@ -137,6 +137,20 @@
     </div>
   </div>
 
+  <div class="project-card">
+    <img src="insidethemind.png" alt="YSI Ignite Edition#4">
+    <div class="card-content">
+      <h3>YSI Ignite Edition#4</h3>
+      <p><h4>September 2025</h4> YSI Ignite 9月号は脳科学についてです。私たちの脳はとてもたくさんの謎を抱えています。
+        日本支部メンバーの研究プロジェクトについてや、実際に脳科学の分野の体験、ニューロンを作ることについてなど様々なテーマ
+        の記事が集まっています！
+      </p>
+      <a href="https://online.fliphtml5.com/ygusb/gsdz/">
+      <button class="ysi-button">サイエンスマガジンリンク#3</button>
+      </a>
+    </div>
+  </div>
+
     <div class="project-card">
     <img src="astronomy.png" alt="YSI SNS posts">
     <div class="card-content">
